# proto-kit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  configure.sh  package_desktop.sh  package_web.sh
cmake/: assets.cmake  init.cmake  libs.cmake  varprinter.cmake  webconfig.cmake
source/: game.cpp  game.hpp  game_settings.cpp  game_settings.hpp  main.cpp  utils.cpp  utils.hpp  web.cpp  web.hpp
source/beach_bounce/: background.cpp  background.hpp  ball.cpp  ball.hpp  paddle.cpp  paddle.hpp
web/: module.js  style.css  template.debug.html  template.release.html
